:wrench: Fix unicode characters and text box spacing

--- a/css/expand.css
+++ b/css/expand.css
@@ -84,7 +84,7 @@ section {
   content: "-";
 }
 #toggle9:checked ~ #expand {
-  height: 350px;
+  height: 400px;
 }
 #toggle9:checked ~ label::before {
   content: "-";
